# RAG

./: Makefile  README.md  docker-compose.yml  pyproject.toml  qdrant_vector_rag.py
tutorials/evals/: evaluate_tool_calling.ipynb
