[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Hdotk <harpal.s.khing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "^1.55.0"
qdrant-client = "^1.12.1"
llama-index-vector-stores-qdrant = "^0.4.0"
llama-index-readers-file = "^0.4.0"
llama-index-embeddings-fastembed = "^0.3.0"
llama-index-llms-openai = "^0.3.1"
llama-index = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
